Fix layout on small devices

--- a/Extra/ResponsiveImages/css/main.css
+++ b/Extra/ResponsiveImages/css/main.css
@@ -46,7 +46,7 @@ article {
   margin: auto;
 }
 
-article * {
+article > * {
   margin-left: 8px;
   margin-right: 8px;
 }
